# internal/docs/swagger.json
@@ -20,7 +20,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Performance"
+                                "$ref": "#/definitions/Performance"
                             }
                         }
                     },
@@ -45,6 +45,8 @@
                 "summary": "Create a new performance",
                 "parameters": [
                     {
+                        "maxLength": 255,
+                        "minLength": 1,
                         "type": "string",
                         "description": "Name",
                         "name": "name",
@@ -71,6 +73,7 @@
                     },
                     {
                         "type": "string",
+                        "format": "uuid",
                         "description": "Set user role",
                         "name": "userRoleId",
                         "in": "formData"
@@ -80,7 +83,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Performance"
+                            "$ref": "#/definitions/Performance"
                         }
                     },
                     "400": {
@@ -121,7 +124,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Performance"
+                            "$ref": "#/definitions/Performance"
                         }
                     },
                     "404": {
@@ -178,7 +181,7 @@
         "/performances/{id}/cover": {
             "post": {
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "performances"
@@ -241,7 +244,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Resource"
+                                "$ref": "#/definitions/Resource"
                             }
                         }
                     },
@@ -297,7 +300,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/model.Resource"
+                            "$ref": "#/definitions/Resource"
                         }
                     },
                     "400": {
@@ -313,6 +316,9 @@
         },
         "/resources/{id}": {
             "get": {
+                "produces": [
+                    "application/octet-stream"
+                ],
                 "tags": [
                     "resources"
                 ],
@@ -331,7 +337,7 @@
                     "200": {
                         "description": "Resource file",
                         "schema": {
-                            "type": "file"
+                            "type": "string"
                         }
                     },
                     "404": {
@@ -361,7 +367,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.UserRole"
+                                "$ref": "#/definitions/UserRole"
                             }
                         }
                     },
@@ -378,22 +384,14 @@
         }
     },
     "definitions": {
-        "main.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.Performance": {
+        "Performance": {
             "type": "object",
             "properties": {
                 "bpm": {
                     "type": "integer"
                 },
                 "cover": {
-                    "$ref": "#/definitions/model.Resource"
+                    "$ref": "#/definitions/Resource"
                 },
                 "createdAt": {
                     "type": "string"
@@ -409,7 +407,7 @@
                 }
             }
         },
-        "model.Resource": {
+        "Resource": {
             "type": "object",
             "properties": {
                 "createdAt": {
@@ -422,12 +420,40 @@
                     "type": "string"
                 },
                 "role": {
-                    "$ref": "#/definitions/model.UserRole"
+                    "$ref": "#/definitions/UserRole"
                 },
                 "type": {
                     "$ref": "#/definitions/model.ResourceType"
                 },
                 "updatedAt": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserRole": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
@@ -446,23 +472,6 @@
                 "ResourceTypeAudio",
                 "ResourceTypeDocument"
             ]
-        },
-        "model.UserRole": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                }
-            }
         }
     }
 }
