# internal/model/user.go
@@ -3,9 +3,9 @@ package model
 type User struct {
 	BaseModel
 	Role UserRole `json:"role" gorm:"not null"`
-}
+} //	@name	User
 
 type UserRole struct {
 	BaseModel
 	Name string `json:"name" gorm:"not null;unique"`
-}
+} //	@name	UserRole
